🐛 Add config.js to dashboard (Supabase credentials)

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -341,6 +341,7 @@
             color: #065f46;
         }
     </style>
+    <script src="/assets/js/config.js"></script>
 </head>
 <body>
     <!-- Top Navigation Bar - Same as promotions -->
