--- a/public/promotions.html
+++ b/public/promotions.html
@@ -12,7 +12,7 @@
     <title>CDM86 - Promozioni Esclusive</title>
     
     <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json">
+    <!-- <link rel="manifest" href="/manifest.json"> -->
     
     <!-- Icons -->
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/images/icon-72x72.png">
