Fix null referrer error in registration
- Add null check for referrer.id in user_metadata
- Use ternary operator to set referred_by_id only if referrer exists

--- a/public/login.html
+++ b/public/login.html
@@ -407,8 +407,8 @@
                         data: {
                             first_name: firstName,
                             last_name: lastName,
-                            referral_code_used: referralCode,
-                            referred_by_id: referrer.id
+                            referral_code_used: referralCode || null,
+                            referred_by_id: referrer ? referrer.id : null
                         }
                     }
                 });
