Remove ADMIN001 test text from registration note

--- a/public/login.html
+++ b/public/login.html
@@ -242,8 +242,7 @@
         <div id="register-panel" class="form-panel">
             <div class="referral-note">
                 <strong>⚠️ Codice Referral Obbligatorio</strong>
-                Devi avere un codice referral per registrarti!<br>
-                <small>Usa <code>ADMIN001</code> per testare</small>
+                Devi avere un codice referral per registrarti!
             </div>
             
             <form id="register-form">
