Fix organization/user separation: remove promotions link and add access control

--- a/public/organization-dashboard.html
+++ b/public/organization-dashboard.html
@@ -319,12 +319,9 @@
     <!-- Top Navigation -->
     <nav class="top-nav">
         <div class="nav-brand">
-            🏢 CDM86
+            🏢 CDM86 - Dashboard Organizzazione
         </div>
         <div class="nav-actions">
-            <button class="nav-btn" onclick="window.location.href='/public/promotions.html'">
-                <i class="fas fa-tag"></i> Promozioni
-            </button>
             <button class="nav-btn" onclick="logout()">
                 <i class="fas fa-sign-out-alt"></i> Logout
             </button>
