Fix: Migliora ridimensionamento immagini nelle card promozioni
- Aggiunte proprietà min/max width/height per bloccare dimensioni
- Aggiunto object-position: center per centrare l'immagine
- Aggiunto flex-shrink: 0 per evitare compressione

--- a/public/admin-panel.html
+++ b/public/admin-panel.html
@@ -1177,8 +1177,14 @@
         .promo-item-image {
             width: 120px;
             height: 80px;
+            min-width: 120px;
+            min-height: 80px;
+            max-width: 120px;
+            max-height: 80px;
             border-radius: 10px;
             object-fit: cover;
+            object-position: center;
+            flex-shrink: 0;
         }
         
         .promo-item-content {
