--- a/public/promotions.html
+++ b/public/promotions.html
@@ -23,11 +23,13 @@
     <link rel="stylesheet" href="/assets/css/promotions.css">
     <link rel="stylesheet" href="/assets/css/filters.css">
     <link rel="stylesheet" href="/assets/css/animations.css">
+    <link rel="stylesheet" href="/assets/css/auth-modal.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Config -->
     <script src="/assets/js/config.js"></script>
+    <script src="/assets/js/auth-modal.js"></script>
 </head>
 <body class="promotions-page">
 <body class="promotions-page">
