--- a/backups/20251021_120850/index.html
+++ b/backups/20251021_120850/index.html
@@ -27,9 +27,6 @@
     
     <!-- Config -->
     <script src="assets/js/config.js"></script>
-
-    <!-- Auth Modal Enhanced -->
-    <script type="module" src="assets/js/auth-modal-enhanced.js"></script>
 </head>
 <body class="promotions-page">
     
@@ -513,15 +510,9 @@
                 window.location.href = '/public/promotions.html';
             });
         } else {
-            // User not logged in - show auth modal
+            // User not logged in - redirect to login page
             loginBtn.addEventListener('click', () => {
-                // Check if authModalEnhanced is available
-                if (window.authModalEnhanced) {
-                    window.authModalEnhanced.open();
-                } else {
-                    // Fallback to login page
-                    window.location.href = '/public/login.html';
-                }
+                window.location.href = '/public/login.html';
             });
         }
     </script>
