Add login required modal to index.html and fix all login.html redirects to index.html

--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -223,7 +223,8 @@
         async function checkAuth() {
             const { data: { session } } = await supabase.auth.getSession();
             if (!session) {
-                window.location.href = '/public/login.html';
+                // Redirect to index where they can login via modal
+                window.location.href = '/index.html';
                 return null;
             }
             currentUser = session.user;
