--- a/public/favorites.html
+++ b/public/favorites.html
@@ -266,7 +266,7 @@
         async function checkAuth() {
             const { data: { session } } = await supabase.auth.getSession();
             if (!session) {
-                window.location.href = '/public/login.html';
+                window.location.href = '/index.html';
                 return null;
             }
             currentUser = session.user;
@@ -484,7 +484,7 @@
                     dropdown.querySelector('#logout-link').addEventListener('click', async (e) => {
                         e.preventDefault();
                         await supabase.auth.signOut();
-                        window.location.href = '/public/login.html';
+                        window.location.href = '/index.html';
                     });
                 }
                 
