--- a/public/promotion-detail.html
+++ b/public/promotion-detail.html
@@ -432,7 +432,7 @@
         window.logout = async function(e) {
             e.preventDefault();
             await supabase.auth.signOut();
-            window.location.href = '/public/login.html';
+            window.location.href = '/index.html';
         };
         
         // Initialize
